--- a/css/styles.css
+++ b/css/styles.css
@@ -123,3 +123,14 @@ body{
 .campus-content-img >img {
     width: 100%;
 }
+.sectionfive{
+    background-image: url(../images/sectionfive/sectionfive.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 623px;
+}
+.sectionfive-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 30px 0 0 0;
+}
