--- a/css/styles.css
+++ b/css/styles.css
@@ -413,6 +413,9 @@ ul{
     .number-list >p{
         font-size: 19px;
     }
+    div#removepagging {
+        padding: 0;
+    }
 }
 @media screen and (max-width: 576px){
     .sectionthree-content-two > h2{
@@ -465,5 +468,39 @@ ul{
     }
     .visiting-content-img > h1{
         font-size:13px;
+    }
+    .sectionfour-content-text > h1{
+        font-size:40px;
+    }
+    .campus-content-img > p{
+        font-size: 10px;
+    }
+    .col-lg-6.col-md-6.col-sm-6.col-6.widthfix {
+        max-width: 40%;
+    }
+    .sectionfour-content-two > img{
+        width:96%;
+    }
+    .sectionfour{
+        height:938px;
+    }
+    .tourimage{
+        width: 100%;
+        margin: 0;
+    }
+    .w-100 {
+        width: 96%!important;
+    }
+    .number-list h1{
+        font-size: 15px;
+    }
+    .sectionthree-content-two > h2{
+        font-size: 9px;
+    }
+    div#gridcolorchange{
+        max-width: 82px;
+    }
+    .tourimage > h4{
+        font-size: 35px;
     }
 }
